Solution-1/web-app/sec-group.tf
 #Security groups
  
  resource "aws_security_group" "main_dev_sg" {
    name        = "media_dev_sg"
    description = "Used for access to the dev instance"
    vpc_id      = "${aws_vpc.main.id}"
  
    #SSH
  
    ingress {
      from_port   = 22
      to_port     = 22
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
    }
  
    #HTTP
  
    ingress {
      from_port   = 80
      to_port     = 80
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
    }
    #Custom
      ingress {
      from_port   = 3000
      to_port     = 3000
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
    }
    egress {
      from_port   = 0
      to_port     = 0
      protocol    = "-1"
      cidr_blocks = ["0.0.0.0/0"]
    }
    
}

 #Public Security group
  
  resource "aws_security_group" "buildit_public_sg" {
    name        = "buildit_public_sg"
    description = "Used for public and private instances for load balancer access"
    vpc_id      = "${aws_vpc.main.id}"
  
    #HTTP 
  
    ingress {
      from_port   = 80
      to_port     = 3000
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
    }
  
    #Outbound internet access
  
    egress {
      from_port   = 0
      to_port     = 0
      protocol    = "-1"
      cidr_blocks = ["0.0.0.0/0"]
    }
  }
